--- a/homework.html
+++ b/homework.html
@@ -11,8 +11,9 @@
  <body>
  <a href="1.png"></a>
  <ul>
- <ol><a href="">第一次作业</a></ol>
- <ol><a href="">第二次作业</a></ol>
+ <ol><a href="https://god-likez.github.io/%E6%96%B0%E7%9A%84%E6%96%87%E6%A1%A3%201.html">第一次作业</a></ol>
+ <ol><a href="https://god-likez.github.io/Untitled1.html">第二次作业</a></ol>
+  <ol><a href="https://god-likez.github.io/Untitled1.html">第三次作业</a></ol>
  <ol></ol>
  </ul>
  </body>
