--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
  <head>
@@ -7,10 +8,28 @@
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <title>Document</title>
+  <style type="text/css">
+	.p1{
+	margin:0 auto;
+	height:464px;
+	width:472px;
+	
+	}
+	.p2{
+	text-align:center;
+	font-size:3em;
+	}
+  </style>
  </head>
- <body>
-<h>欢迎！</h>
-<a href="https://god-likez.github.io/homework.html">作业</a>
-<img src="1.png" alt="" />
+ <body >
+
+
+<div class="p1"><img src="QR.png" alt="" /></div>
+<div class="p2" ><h >欢迎！来到god-like的首页！</h></div>
+<div class="p2"><a href="https://god-likez.github.io/homework.html">作业</a></div>
+
+
+<div class="p2"><img src="1.png" alt="" /></div>
+
  </body>
 </html>
