--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <body >
 
 
-<div class="p1"><img src="QRcode.png" alt="" /></div>
+<div class="p1"><img src="qrCode.png" alt="" /></div>
 <div class="p2" ><h >欢迎！来到god-like的首页！</h></div>
 <div class="p2"><a href="https://god-likez.github.io/homework.html">作业</a></div>
 
