--- a/homework.html
+++ b/homework.html
@@ -14,6 +14,7 @@
  <ol><a href="https://god-likez.github.io/%E6%96%B0%E7%9A%84%E6%96%87%E6%A1%A3%201.html">第一次作业</a></ol>
  <ol><a href="https://god-likez.github.io/Untitled1.html">第二次作业</a></ol>
   <ol><a href="https://god-likez.github.io/count.html">第三次作业</a></ol>
+  <ol><a href="https://god-likez.github.io/textrandom.html">期末作业</a></ol>
   
  <ol></ol>
  </ul>
