--- a/textrandom.html
+++ b/textrandom.html
@@ -120,7 +120,7 @@
     }
     //设置盒子本来位置
     this.setPositionDiv=function (){
-      let x=parseInt(this.x0)*1.5*r+500;
+      let x=parseInt(this.x0)*1.5*r+1/4*bodyWidth;
       let y=parseInt(this.y0)*1.5*r;
       this.dom.style.left=x+'px';
       this.dom.style.top=y+'px';
